icm-macros/testing/pack/errors/MappingField.sol
pragma solidity ^0.8.30;

// #[pack()]
struct HasMapping {
    mapping(uint256 => uint256) data;
}